--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ ul li a {
 .resume {
   padding: 130px 0 130px 0;
   display: grid;
+  gap: 115px;
 }
 
 .resume-m-h {
@@ -227,8 +228,51 @@ ul li a {
   font-weight: 600;
   line-height: 27px;
 }
-.summary-titel{
-  
+
+.resume-d-f {
+  display: flex;
+  gap: 50px;
+}
+.nev-but-to {
+  display: grid;
+  justify-content: center;
+  text-decoration: none;
+}
+/* A summary of My Resume */
+
+/* footer */
+footer {
+  background: rgb(255, 248, 243);
+  display: flex;
+  padding: 130px 230px;
+  gap: 115px;
 }
 
-/* A summary of My Resume */
+.footer-collam {
+  width: 50%;
+}
+
+.f-section-titel {
+  color: rgb(24, 24, 24);
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 48px;
+}
+footer input[type="text"],
+[type="email"],
+textarea {
+  display: block;
+  padding: 18px 350px 18px 30px;
+  color: rgb(117, 117, 117);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  border: none;
+  border-radius: 5px;
+  background: rgb(255, 255, 255);
+  margin-bottom: 24px;
+}
+.f-section-titel-to {
+  margin-bottom: 30px;
+}
+/* footer */
